<resources>
    <string name="app_name">loginTrabalho</string>
    <string name="contatinhos">Contatinhos</string>
    <string name="input_user">Usuário</string>
    <string name="input_pwd">Senha</string>
    <string name="btn_login">Log in</string>
    <string name="btn_singin">Sign In</string>
    <string name="title_agenda">Seus Contatinhos</string>
    <string name="lbl_type">Type</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_adress">Adress</string>
    <string name="lbl_phone">Phone</string>
    <string name="imp_name">Name</string>
    <string name="imp_adress">Adress</string>
    <string name="lbl_title_main">Contatinhos</string>
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>
    <string name="imp_phone">Phone</string>
    <string name="btn_newContact">novo contatinho</string>
    <string name="lbl_title_singin">SingIn Contatinhos</string>
    <string name="btn_finish">finish</string>
    <string name="btn_cancel_singin">Cancel</string>
    <string name="imp_pass">password</string>
    <string name="imp_user">User</string>
    <string name="alert_success_item_created" />
</resources>