<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.Contatinhos.activity_singin">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/lbl_title_singin"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:text="@string/btn_finish"
        app:layout_constraintEnd_toEndOf="@+id/imp_pass"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/imp_pass"
        app:layout_constraintTop_toBottomOf="@+id/imp_pass" />

    <EditText
        android:id="@+id/imp_user"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/imp_user"
        android:inputType="textPersonName"
        android:text="@string/imp_user"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/imp_pass"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/imp_pass"
        android:inputType="numberPassword"
        app:layout_constraintEnd_toEndOf="@+id/imp_user"
        app:layout_constraintStart_toStartOf="@+id/imp_user"
        app:layout_constraintTop_toBottomOf="@+id/imp_user"
        android:autofillHints="" />

    <Button
        android:id="@+id/btn_singin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/btn_cancel_singin"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />
</androidx.constraintlayout.widget.ConstraintLayout>